tests/algorithms/transpiler/Zig/ciphers/diffie.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/ciphers/diffie.zig:73:9: error: use of undeclared identifier 'a_public'